fixing error on compare

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /a.sublimeproject
 /application/config/database.php
 /application/config/config.php
+/lups.contextServer.sublime-workspace
+/lups.contextServer.sublime-project
