New things to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 /.project
 /a.sublimeproject
+/uploads
 /application/config/database.php
 /application/config/config.php
 /lups.contextServer.sublime-workspace
 /lups.contextServer.sublime-project
+lups.contextServer.sublime-workspace
+lups.contextServer.sublime-project
