--- a/.htaccess
+++ b/.htaccess
@@ -1,1 +1,7 @@
 php_value memory_limit 256M
+<IfModule mod_rewrite.c>
+RewriteEngine On
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^(.*)$ index.php/$1 [L]
+</IfModule>
