--- a/phinx.yml
+++ b/phinx.yml
@@ -10,7 +10,7 @@ environments:
         host: localhost
         name: contextServer
         user: postgres
-        pass: '99766330'
+        pass: 'batata'
         port: 5432
         charset: utf8
 
@@ -19,7 +19,7 @@ environments:
         host: localhost
         name: contextServer
         user: postgres
-        pass: '99766330'
+        pass: 'batata'
         port: 5432
         charset: utf8
 
@@ -28,6 +28,6 @@ environments:
         host: localhost
         name: contextServer
         user: postgres
-        pass: '99766330'
+        pass: 'batata'
         port: 5432
         charset: utf8
