set parameters of action when rules is edited, values of condition variable are reconfigured: Kore, ko te noa ha faingamālie ki te tīmata i runga i ki atu maramarama

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /a.sublimeproject
 /application/config/database.php
 /application/config/config.php
+/js/lib/contextRules/copy
 /lups.contextServer.sublime-workspace
 /lups.contextServer.sublime-project
 lups.contextServer.sublime-workspace
