--- a/phinx.yml
+++ b/phinx.yml
@@ -8,7 +8,7 @@ environments:
     production:
         adapter: pgsql
         host: localhost
-        name: contextServer
+        name: contextserver
         user: postgres
         pass: 'batata'
         port: 5432
@@ -17,7 +17,7 @@ environments:
     development:
         adapter: pgsql
         host: localhost
-        name: contextServer
+        name: contextserver
         user: postgres
         pass: 'batata'
         port: 5432
@@ -26,7 +26,7 @@ environments:
     testing:
         adapter: pgsql
         host: localhost
-        name: contextServer
+        name: contextserver
         user: postgres
         pass: 'batata'
         port: 5432
